# office2pdf

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT-MANAGEMENT.md  Cargo.toml  PPTX_FONT_RESOLUTION.md  PRD.md  README.md  program.md
.claude/: settings.local.json
.claude/memory/: INDEX.md
.github/workflows/: ci.yml  release.yml
assets/bugfixes/: README.md
crates/office2pdf/: Cargo.toml
crates/office2pdf-cli/: Cargo.toml
crates/office2pdf-cli/src/: main.rs  main_tests.rs  metrics.rs  metrics_tests.rs  server.rs  server_tests.rs
crates/office2pdf/benches/: conversion.rs
crates/office2pdf/examples/: custom_options.rs  dump_typst_bundle.rs  from_bytes.rs  simple_convert.rs
crates/office2pdf/examples/wasm-web/: app.js  index.html
crates/office2pdf/src/: config.rs  defaults.rs  error.rs  error_tests.rs  lib.rs  lib_conversion_tests.rs  lib_pipeline.rs  lib_pipeline_tests.rs  lib_render_tests.rs  lib_robustness_tests.rs  lib_streaming_tests.rs  lib_test_support.rs  pdf_ops.rs  pdf_ops_tests.rs  wasm.rs
crates/office2pdf/src/ir/: document.rs  elements.rs  mod.rs  positioned_tests.rs  style.rs  style_tests.rs
crates/office2pdf/src/parser/: chart.rs  cond_fmt.rs  docx.rs  docx_context_columns.rs  docx_context_drawing.rs  docx_context_paragraph_shading.rs  docx_context_table_header.rs  docx_contexts.rs  docx_foundation_tests.rs  docx_hyperlink_tests.rs  docx_image_tests.rs  docx_inline_style_tests.rs  docx_list_tests.rs  docx_lists.rs  docx_media.rs  docx_notes_textbox_tests.rs  docx_paragraph_format_tests.rs  docx_sections.rs  docx_style_tests.rs  docx_styles.rs  docx_table_structure_tests.rs  docx_table_tests.rs  docx_tables.rs  docx_tests.rs  docx_text.rs  drawingml.rs  embedded_fonts.rs  embedded_fonts_tests.rs  metadata.rs  mod.rs  omml.rs  omml_tests.rs  pptx.rs  pptx_connector_tests.rs  pptx_emf.rs  pptx_group_shape_tests.rs  pptx_image_tests.rs  pptx_package.rs  pptx_preset_shape_tests.rs  pptx_shape_style_tests.rs  (+31 more)
crates/office2pdf/src/render/: font_context.rs  font_context_tests.rs  font_subst.rs  font_subst_tests.rs  mod.rs  pdf.rs  pdf_tests.rs  typst_gen.rs  typst_gen_advanced_tests.rs  typst_gen_fixed_page_tests.rs  typst_gen_fixed_page_textbox_tests.rs  typst_gen_font_heading_tests.rs  typst_gen_headers.rs  typst_gen_image_tests.rs  typst_gen_images.rs  typst_gen_list_tests.rs  typst_gen_lists.rs  typst_gen_metadata_tests.rs  typst_gen_page_misc_tests.rs  typst_gen_paragraph_tests.rs  typst_gen_shapes.rs  typst_gen_table_cell_content_tests.rs  typst_gen_table_codegen_tests.rs  typst_gen_table_page_tests.rs  typst_gen_tables.rs  typst_gen_tests.rs  typst_gen_text.rs  typst_gen_text_pipeline_tests.rs  typst_gen_visual_tests.rs
crates/office2pdf/tests/: artifact_generator.rs  bulk_conversion.rs  docx_fixtures.rs  pdf_validation.rs  perf_validation.rs  pptx_fixtures.rs  xlsx_fixtures.rs
crates/office2pdf/tests/common/: mod.rs
crates/office2typst/: Cargo.toml
crates/office2typst/src/: lib.rs
docs/: xlsx-parser-evaluation.md
docs/superpowers/plans/: 2026-07-19-xlsx-six-digit-colors.md
project/: README.md  compare_pdfs.py
project/standard/: .gitignore
project/tests/: test_compare_pdfs.py
references/: INDEX.md
scripts/ralph/: CLAUDE.md  prd.json  progress.txt  ralph.sh  run-all.sh
scripts/ralph/phases/: phase2.json  phase3.json  phase4.json
target-release/: .rustc_info.json
target-release/release/: liboffice2pdf.d  office2pdf.d
target-release/release/.fingerprint/adler2-7f1b48d8940b451b/: lib-adler2  lib-adler2.json
target-release/release/.fingerprint/aes-89c947a7cd3df41f/: lib-aes  lib-aes.json
target-release/release/.fingerprint/ahash-0d8f796150aabaac/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-release/release/.fingerprint/ahash-41b5ea72e0cbb5a7/: lib-ahash  lib-ahash.json
target-release/release/.fingerprint/ahash-e2adeb7711c632e8/: build-script-build-script-build  build-script-build-script-build.json
target-release/release/.fingerprint/aho-corasick-e11b36a970610dee/: lib-aho_corasick  lib-aho_corasick.json
target-release/release/.fingerprint/aligned-f0ad9f670b9b18de/: lib-aligned  lib-aligned.json
target-release/release/.fingerprint/aligned-vec-79a1190e750caa21/: lib-aligned_vec  lib-aligned_vec.json
target-release/release/.fingerprint/anstream-04640e5b67afcba1/: lib-anstream  lib-anstream.json
tests/fixtures/: DENYLIST.md  THIRD-PARTY-LICENSES.md
tests/fixtures/docx/: issue_189_footer_image_rtl.docx
tests/fixtures/xlsx/: theme_color_drawing.xlsx
(+1698 files in other folders)
