[package]
name = "office2pdf"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Convert DOCX, XLSX, and PPTX files to PDF using pure Rust"

[dependencies]
thiserror = "2"
typst = "0.14"
typst-pdf = "0.14"
typst-kit = { version = "0.14", default-features = false, features = ["fonts"] }
comemo = "0.5"
docx-rs = "0.4"
serde = "1"
serde_json = "1"
zip = "0.6"
quick-xml = "0.38"
umya-spreadsheet = "2"

[dev-dependencies]
